app-configs/manifest-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: www.${HOST}
      http:
        paths:
          - backend:
              serviceName: spring-boot-service
              servicePort: 8080
            path: /devops
            pathType: Server
